server/static/base.less
html {
  height: 100%;
}

/* From "default dark" in https://chriskempson.github.io/base16/ */
@black1: #181818;
@black2: #282828;
@grey1 : #383838;
@grey2 : #585858;
@grey3 : #b8b8b8;
@white3: #d8d8d8;
@white2: #e8e8e8;
@white1: #f8f8f8;
@red   : #ab4642;
@orange: #dc9656;
@yellow: #f7ca88;
@green : #a1b56c;
@cyan  : #86c1b9;
@blue  : #7cafc2;
@purple: #ba8baf;
@brown : #a16946;

@selected-background: lighten(@black1, 5%);
@top-border: lighten(@black1, 5%) 2px dotted;
@blank-underline: 1px dashed @grey2;

::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 7px;
}
::-webkit-scrollbar-thumb {
  border-radius: 7px;
  background-color: @grey1;
}

body {
  margin: 0;
  padding: 0;
  height: 100%;
  background-color: @black2;
  color: @grey3;
}

/********************
 * Top level
 ********************/

#grid {
  background: @black1;
  height: 100vh;
  overflow: hidden;
  position: relative;

  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

body #grid * {
  &:not(.fa) { // skip fontawesome
    font-family: 'Fira Code', monospace;
  }
}

#canvas {
  display: block;
  height: 100%;
  overflow: hidden;
  position: relative;
  width: 100%;
  .node {
    position: absolute;
  }
}

#buttons {
  bottom: 0;
  left: 0px;
  position: absolute;

  .specialButton {
    margin-right: 4px;
    &#integrationTestSignal {
      display: inline-block;
    }
  }
}

#status {
  &.error {
    color: red;
  }
}

.as-pointer {
  cursor: pointer;
}

.verb-link {
  &:hover {
    color: @orange;
    text-decoration: underline;
  }
}

.axis {
  background: #777;
  height: 200%;
  position: absolute;
  transform: translate(0, -50%);
  width: 1px;
  &.horizontal {
    height: 1px;
    transform: translate(-50%, 0);
    width: 200%;
  }
}

//*************
// Toplevel
//*************
.toplevel {
  display: flex;
  flex-direction: column;
  width: max-content;
  padding: 4px;
  border: @top-border;

  &.selected {
    background-color: @selected-background;
    outline: 0.4px darken(magenta, 25%) dotted;
  }

  .mouseovered {
    background-color: @grey1;

    .blank {
      color: @grey3;
    }
  }

  .header > .mouseovered, .spec-type > .mouseovered {
    color: @grey3;
  }

  .selected {
    outline: 0.5px magenta solid;
  }

  .blank {
    min-width: 8ch;
    .blank-box-style;
    .blank-text-style;
  }

}

//*************
// Routing table
//*************
.routing-table {
  border: 2px solid @blue;
  padding: 8px;
  width: max-content;

  .header {

    width: 300px;
    color: @orange;
    padding-bottom: 8px;
    margin-bottom: 8px;
    border-bottom: 2px @white3 solid;

    .http {
      margin-right: 5px;
    }

    .count {
      font-weight: bold;

    }
  }

  .handler {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    .url{
      color: @white3;
      .prefix {
        color: @grey2;
      }
    }

    .external {
      color: @orange;
    }

    .verbs {
      color: @grey2;
    }

  }
}

//*************
// DB
//*************
.db {
  margin: 10px;
  display: flex;
  flex-direction: column;

  .dbname {
    background-image: url('/static/_db.png');
    background-position: left center;
    background-repeat: no-repeat;
    padding-left: 20px; /* Adjust according to image size to push text across. */
    margin-bottom: 10px;
    &::before {
      content: "DB: ";
      font-weight: bold;
      font-size: 110%;
    }
  }

  .col {
    display: flex;
    flex-direction: row;

    .name, .type {
      margin: 2px 5px;
      flex: 1 0 0;
      .blank {
        width: 96px; // put it all on one line
      }
    }

  }
}


//*************
// Handler
//*************

// header
.toplevel .header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;

  // center it
  /* border-right: @top-border; */
  /* margin-right: 2px; */
  /* padding-right: 2px; */
  /* &::last-child  { */
  /*   border-right: none; */
  /*   margin-right: 0px; */
  /*   padding-right: 0px; */
  /* } */
  /*  */

  color: @orange;
  font-size: 50%;

  .name {
    padding-left: 10px;
    padding-right: 1ch;
  }

  .module {
    padding-left: 10px;
    padding-right: 1ch;
  }

  .modifier {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
  }

  // remove dotted outline after clicking (source: reset-normalize)
  a:focus {
    outline: none;
  }
  .external {
    /* font-size: 200%; */
    padding-right: 1ch;
    color: @orange;
    vertical-align: center;
  }
}




//*************
// AST macros
//*************
.indent {
  margin-left: 16px;
}

.string-style {
    color: @purple;
    font-style: italic;
    letter-spacing: -0.75px;
}

.blank-box-style {
  height: 15px;
  border-bottom: @blank-underline;
}
.blank-text-style {
  color: @grey1;
  font-style: italic;
  font-size: 8pt;
  text-indent: 4px;
}

.layout-block {
  display: block;
  & > .nested > .atom {
    margin-left: 0px;
  }
  & > .nested > .atom.fieldaccessop {
    margin-right: 0px;
    margin-left: -4px;
  }
}

.layout-inline {
  display: inline-block;
}

.highlighted-indent {
  margin-left: 8px;
  padding-left: 8px;
  border-left: 1px solid @orange;
}

//*************
// AST
//*************
.ast {
  font-size: 10pt;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 24px;
  padding-bottom: 24px;
  white-space: pre;
  width: max-content;
  // border: @top-border;
  .layout-block;

  div {
    .layout-inline;
    vertical-align: top;
    .entry {
      vertical-align: baseline;
    }
  }

  .value-error {
    @highlight: rgba(255, 0, 0, 0.4);
    background-image:
      linear-gradient(45deg, transparent 65%, @highlight 80%, transparent 90%),
      linear-gradient(135deg, transparent 5%, @highlight 15%, transparent 25%),
      linear-gradient(135deg, transparent 45%, @highlight 55%, transparent 65%),
      linear-gradient(45deg, transparent 25%, @highlight 35%, transparent 50%);
    background-repeat: repeat-x;
    background-size: 8px 2px;
    background-position:0 95%;
  }

  .letexpr > .letbody {
    .layout-block;
  }

  .lambdaexpr {
    .layout-block;
    .highlighted-indent;
  }

  .lambdabinding, .arrow {
    color: @orange;
  }

  .value.tstr {
    .string-style;
  }

  .lambdabody {
    .layout-block;
  }

  .ifbody {
    .layout-block;
    .indent;
  }

  .elsebody {
    .layout-block;
    .indent;
  }

  .atom {
    margin-left: 4px;
    margin-right: 4px;
  }

  .atom.fieldaccessop {
    margin-left: -4px;
    margin-right: -4px;
  }

  .moduleseparator {
    color: @green;
  }

  .keyword, .emit {
    color: @green;
  }

  .precedence-1 {
    &,
    & .entry form #search-container #suggestionBox,
    & .string-entry
    {
      background-color: lighten(@black1, 10%);
    }
    .precedence-2 {
      &,
      & .entry form #search-container #suggestionBox,
      & .string-entry
      {
        background-color: lighten(@black1, 15%);
      }
      .precedence-3{
        &,
        & .entry form #search-container #suggestionBox,
        & .string-entry
        {
          background-color: lighten(@black1, 20%);
        }
        .precedence-4 {
          &,
          & .entry form #search-container #suggestionBox,
          & .string-entry
          {
            background-color: lighten(@black1, 25%);
          }
          .precedence-5 {
            &,
            & .entry form #search-container #suggestionBox,
            & .string-entry
            {
              background-color: lighten(@black1, 30%);
            }
            .precedence-6 {
              &,
              & .entry form #search-container #suggestionBox,
              & .string-entry
              {
                background-color: lighten(@black1, 35%);
              }
            }
          }
        }
      }
    }
  }

  .threadexpr {
    .threadmember {
      .layout-block;

      &:first-child > .thread.pipe {
        display: none;
      }

      .thread.pipe {
        margin-top: 1px;
        margin-right: 0px;
        font-size: 70%;
        color: @blue;
      }
    }
  }
}

/********************
 * Entry box
 ********************/

// TODO: figure out proper entry box positioning
// -- this is a demo hack
.header .entry form {
  position: relative;
  margin-top: 0px;
}

.db .entry form {
  position: relative;
  margin-top: 0px;
}

.entry {
  // headers need to be relative to position them. We need to be above
  // the headers, and position:relative allows us to do it.
  position: relative;
  cursor: default;
  background: @black2;
  color: @white3;
  width: auto;
  /* width: 96px; // keeps autocomplete appearing when Creating */

  .types {
    float: right;
    text-transform: lowercase;
    font-family: monospace;
    font-size: 80%;
  }
  form {
    // makes the form takes up no space in the DOM, meaning we don't
    // expand the top-level
    position: absolute;
    margin-top: -12px; // account for the space of both input boxes

    #search-container {
      position: relative;
      #entry-box {
        z-index: 20;
        position: relative;
        color: @grey3;
        background: transparent;
        border-bottom: @blank-underline;
      }
      #suggestionBox {
        position: absolute;
        top: 0;
        left: 0;
        background: @selected-background;
      }
    }
  }
  #autocomplete-holder {

    overflow-y: scroll;
    max-height: 90px;
    font-size: 85%;
    width: 350px;

    .autocomplete-item {
      background: @black2;
      &.highlighted {
        background: #1c3670;
      }
      &.greyed {
        color: @grey2;
      }
    }
  }
}

.omnibox {
  // honestly couldnt tell you where this magic number comes from
  margin-top: -9px;
  .string-entry {
    margin-top: -21px;
  }
}


// ---------------------------
// Strings
// ---------------------------
.string-entry {
  position: relative;
  background: @selected-background;
  #entry-box {
    .blank-box-style;
    .string-style;
    background: transparent;
  }
}

.string-container::before {
  content: "“";
  .string-style;
}

.string-container::after{
  content: "”";
  .string-style;
}


// ---------------------------
// Types
// ---------------------------
.spec-type {
  .blank-text-style;
  padding: 8px;

  & > :not(.header)  {
    margin-left: 2ch;
  }
  .type-object {
    .layout-block;
    span {
      .layout-inline;
    }
    margin-left: 2ch;
    .colon {
      padding-right: 0.5ch;
    }
  }
}

// ---------------------------
// Feature-flags
// ---------------------------

// This creates an ancestor for .feature-flag to be absolute positioned
// against.
.sidebar-box {
  position: relative;
}

.feature-flag {
  position: absolute;
  right: -16px;
}

